[package]
name = "thin-boxed-slice"
version = "0.1.1"
edition = "2021"
description = "`ThinBoxedSlice` stores the size of the slice before the content of the slice, so that `size_of::<ThinBoxedSlice>` is only the size of a pointer."
license = "MPL-2.0"
repository = "https://github.com/seekstar/thin-boxed-slice"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocator-api2 = "^0.2.18"
